cursive-bootstrap/tests/ui/E-CON/E-CON-0103.cursive
// RUN: compile-fail
// DIAG: E-CON-0103
// SPEC: 8.9
// DESC: Invalid domain parameter for parallel

procedure bad_domain_param(ctx: Context) -> () {
    parallel ctx ~> cpu() [name: 123] {  //~ ERROR E-CON-0103: invalid domain parameter
        spawn { return () }
    }
    return ()
}

public procedure main(move ctx: Context) -> i32 {
    return 0
}
